export enum ViewType {
  Audio = 'audio',
  Video = 'video',
}
